fixed bug where snackbar was hiding behind drawer in mobile

--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -63,7 +63,9 @@ $colors: (
 
   &--map {
     position: absolute;
-    left: calc(50vw + 200px) !important;
+    @media (min-width: $md) {
+      transform: translateX(0) !important;
+    }
     .MuiAlert-standardError {
       background-color: white;
     }
